--- a/index.html
+++ b/index.html
@@ -291,7 +291,7 @@
 
 <p>I am a second year Master student in Medical Imaging &amp; Applications
  (Erasmus+ Joint Master program between 3 universities). My research interest lies
- in an intersection between computer vision and medical image analysis (with a focus on deep learning). I am a curious individual who keeps a keen set of interest in a wide variety of subject matters such as, science &amp; technology, learning different musical instruments, exploring photography &amp; cinematography, fitness science and study of modern literature to name a few. Currently, I am looking for a full-time research position starting from September 2018.</p>
+ in an intersection between computer vision and medical image analysis (with a focus on deep learning). I am a curious individual who keeps a keen set of interest in a wide variety of subject matters such as, science &amp; technology, learning different musical instruments, exploring photography &amp; cinematography and fitness science to name a few. Currently, I am looking for a full-time research position starting from September 2018.</p>
 
 
     <div class="row">
