--- a/index.html
+++ b/index.html
@@ -309,7 +309,7 @@
 
 <p>I am a second year Master student in Medical Imaging &amp; Applications
  (Erasmus+ Joint Master program between 3 universities). My research interest lies
- in an intersection between computer vision and medical image analysis (with a focus on deep learning). Currently, I am looking for a full-time research position starting from September 2018.</p>
+ in an intersection between computer vision and medical image analysis (with a focus on deep learning). Currently, I am looking for a full-time research position.</p>
 
 
     <div class="row">
