--- a/index.html
+++ b/index.html
@@ -307,7 +307,7 @@
 
 <h1 id="biography">Biography</h1>
 
-<p>I am a second year Master student in Medical Imaging &amp; Applications
+<p>I am a second year Master&rsquo;s student in Medical Imaging &amp; Applications
  (Erasmus+ Joint Master program between 3 universities). My research interest lies
  in an intersection between computer vision and medical image analysis (with a focus on deep learning). Currently, I am looking for a full-time research position.</p>
 
