--- a/index.html
+++ b/index.html
@@ -321,7 +321,7 @@
 <h1 id="biography">Biography</h1>
 
 <p>I am a PhD student at the University of British Columbia working under the supervision of Dr. Tim Salcudean in the Robotics and Control Lab. My research interest lies
- in an intersection between computer vision and medical image analysis (with a focus on deep learning). My project is a joint collaboration between BCCancer Agency and University of British Columbia to improve Prostate cancer detection and treament. In my free time I like to play guitar, watch movies, go for hikes and cook!</p>
+ in an intersection between computer vision and medical image analysis (with a focus on deep learning). My project is a joint collaboration between BCCancer Agency and University of British Columbia to improve prostate cancer detection and treament. In my free time I like to play guitar, watch movies, go for hikes and cook!</p>
 
 
     <div class="row">
