--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
               <div class="one">
                 <div class="two" id='cgan_image'>
                 <img src="images/cGAns2.png"></div>
-                <img src="images/cGANs1.png">
+                <img src="images/cGAns1.png">
               </div>
               <script type="text/javascript">
                 function cgan_start() {
