fixed some links

--- a/index.html
+++ b/index.html
@@ -34,11 +34,11 @@
 
                   <br><br>
                   In my free time I like to play
-                  <a href="https://www.youtube.com/watch?v=3vrRmfKrYTg&ab_channel=TajwarAleef" style="font-size: 14px">guitar</a>,
+                  <a href="https://youtu.be/3vrRmfKrYTg" style="font-size: 14px">guitar</a>,
                   watch movies, and cook! I also enjoy all sort of sports (nowadays doing powerlifting, ice-skating,
                   biking, and bouldering). I wish to see and explore more parts of this beautiful earth; so
                   far I have covered 23 countries and countless cities/towns (check my <a
-                          href="https://www.youtube.com/watch?v=6G1_6NY0hQw&t=4s&ab_channel=TajwarAleef" style="font-size: 14px">video</a>
+                          href="https://youtu.be/6G1_6NY0hQw" style="font-size: 14px">video</a>
                   from Thailand).
                 </p>
               </p>
@@ -47,9 +47,9 @@
                 <a href="data/Tajwar_Abrar_Aleef_CV.pdf" target="_blank">CV</a> &nbsp/&nbsp
                 <a href="https://scholar.google.com/citations?user=MhZ_pv8AAAAJ&hl=en&oi=ao">Google Scholar</a> &nbsp/&nbsp
                 <a href="https://www.researchgate.net/profile/Tajwar-Aleef">Research Gate</a> &nbsp/&nbsp
-                <a href="https://github.com/tajwarabraraleef/">Github</a>
+                <a href="https://github.com/tajwarabraraleef/">Github</a> &nbsp/&nbsp
                 <a href="https://twitter.com/tajwaraleef">Twitter</a> &nbsp/&nbsp
-                <a href="https://www.youtube.com/user/rrobothead/videos">YouTube</a> &nbsp/&nbsp
+                <a href="https://www.youtube.com/user/rrobothead/videos">YouTube</a>
               </p>
             </td>
             <td style="padding:2.5%;width:40%;max-width:40%">
@@ -113,7 +113,7 @@
               <a href="https://bmiai.ubc.ca/people/ingrid-spadinger">Ingrid T. Spadinger</a>,
               <a href="https://surgery.med.ubc.ca/people/m-peacock//">Michael D. Peacock</a>,
               <a href="https://scholar.google.com/citations?user=kpp_A9wAAAAJ&hl=en&oi=ao/">Septimiu E. Salcudean</a>,
-              <a href="https://scholar.google.com/citations?hl=en&user=cA0ELoQAAAAJ/">S. Sara Mahdavi</a>
+              <a href="https://scholar.google.com/citations?user=cA0ELoQAAAAJ&hl=en/">S. Sara Mahdavi</a>
               <br>
 
               <a href="https://miccai2021.org/en/"><em>MICCAI</em></a>, 2021 &nbsp
@@ -159,7 +159,7 @@
               <a href="https://bmiai.ubc.ca/people/ingrid-spadinger">Ingrid T. Spadinger</a>,
               <a href="https://surgery.med.ubc.ca/people/m-peacock//">Michael D. Peacock</a>,
               <a href="https://scholar.google.com/citations?user=kpp_A9wAAAAJ&hl=en&oi=ao/">Septimiu E. Salcudean</a>,
-              <a href="https://scholar.google.com/citations?hl=en&user=cA0ELoQAAAAJ/">S. Sara Mahdavi</a>
+              <a href="https://scholar.google.com/citations?user=cA0ELoQAAAAJ&hl=en/">S. Sara Mahdavi</a>
               <br>
               <a href="http://www.ipcai.org/"><em>IPCAI</em></a>, 2021 &nbsp <font color="red"><strong>(Oral
               Presentation - Honorary Award for Best Presentation)</strong></font>
@@ -535,7 +535,7 @@
 
                 <papertitle>5-Axis Robotic Arm</papertitle>
               <br>
-              <a href="https://www.youtube.com/watch?v=zGz-Ilaczoo&ab_channel=TajwarAleef">Video</a>
+              <a href="https://youtu.be/zGz-Ilaczoo">Video</a>
               <p></p>
                 Made this totally from scratch with no access to any proper tool. The parts were scorched and carved
                 out of plastic sheets using just a box cutter. Rubber from a balloon was stapled into the gripper for
@@ -573,7 +573,7 @@
 
                 <papertitle>Firefighting Bot</papertitle>
               <br>
-              <a href="https://www.youtube.com/watch?v=iWBHc8A4hWQ&ab_channel=TajwarAleef">Video</a>
+              <a href="https://youtu.be/iWBHc8A4hWQ">Video</a>
               <p></p>
                 A concept of autonomous fire detection and extinguishing. The bot has IR sensors mounted in front
               that looks from fire in the surrounding environment. If fire is detected, it goes towards
@@ -609,7 +609,7 @@
 
                 <papertitle>Surveillance Robot</papertitle>
               <br>
-              <a href="https://www.youtube.com/watch?v=yoHOOmsJTkc&ab_channel=TajwarAleef">Video</a>
+              <a href="https://youtu.be/yoHOOmsJTkc">Video</a>
               <p></p>
               During that time, I just started learning a bit about android app design. Here, I made a custom
               android controller that controls this robot using bluetooth. Another android phone mounted on the robot
@@ -646,7 +646,7 @@
 
                 <papertitle>Sonar Glasses for the visually impaired</papertitle>
               <br>
-              <a href="https://www.youtube.com/watch?v=JOoEmXBZgmg&t=8s&ab_channel=TajwarAleef">Video</a>
+              <a href="https://youtu.be/JOoEmXBZgmg">Video</a>
               <p></p>
               This is a simple concept of using sensors to assist visually impaired people. Sonar sensors were
               mounted on to glasses which detects if any obstacle is present in the periphery of the person. Based
@@ -684,7 +684,7 @@
 
                 <papertitle>Smart Line Follower</papertitle>
               <br>
-              <a href="https://www.youtube.com/watch?v=fsvVbdsJ3fM&t=37s&ab_channel=TajwarAleef">Short story video
+              <a href="https://youtu.be/fsvVbdsJ3fM">Short story video
                 (warning inappropriate jokes!)</a>
               <p></p>
               In my freshman year, as I started learning more about logic gates. I decided to make a
@@ -806,7 +806,7 @@
 
                 <papertitle>RRL1</papertitle>
               <br>
-              <a href="https://www.youtube.com/watch?v=RDmQXRWayOQ&ab_channel=TajwarAleef">Video</a>
+              <a href="https://youtu.be/RDmQXRWayOQ">Video</a>
               <p></p>
               After seeing a documentary on NASA's Mars rovers: Spirit and Opportunity, I became obsessed with
               rovers. I have spent so many hours in my room trying to learn things on my own in the hopes of building
