--- a/index.html
+++ b/index.html
@@ -43,12 +43,13 @@
                 </p>
               </p>
               <p style="text-align:center">
-                <a href="mailto:tajwaraleef@ece.ubc.ca">Email</a> &nbsp/&nbsp
-                <a href="data/Tajwar_Abrar_Aleef_CV.pdf" target="_blank">CV</a> &nbsp/&nbsp
-                <a href="https://scholar.google.com/citations?user=MhZ_pv8AAAAJ&hl=en&oi=ao">Google Scholar</a> &nbsp/&nbsp
-                <a href="https://www.researchgate.net/profile/Tajwar-Aleef">Research Gate</a> &nbsp/&nbsp
-                <a href="https://github.com/tajwarabraraleef/">Github</a> &nbsp/&nbsp
-                <a href="https://twitter.com/tajwaraleef">Twitter</a> &nbsp/&nbsp
+                <a href="mailto:tajwaraleef@ece.ubc.ca">Email</a> &nbsp|&nbsp
+                <a href="data/Tajwar_Abrar_Aleef_CV.pdf" target="_blank">CV</a> &nbsp|&nbsp
+                <a href="https://scholar.google.com/citations?user=MhZ_pv8AAAAJ&hl=en&oi=ao">Google Scholar</a>
+                &nbsp|&nbsp
+                <a href="https://www.researchgate.net/profile/Tajwar-Aleef">Research Gate</a> &nbsp|&nbsp
+                <a href="https://github.com/tajwarabraraleef/">Github</a> &nbsp|&nbsp
+                <a href="https://twitter.com/tajwaraleef">Twitter</a> &nbsp|&nbsp
                 <a href="https://www.youtube.com/user/rrobothead/videos">YouTube</a>
               </p>
             </td>
