updated strong text

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
             <td style="padding:20px;width:75%;vertical-align:middle">
               <a href="https://arxiv.org/abs/2103.09996">
                 <papertitle>Rapid treatment planning for low-dose-rate prostate brachytherapy with
-                  TP-GAN</papertitle><font color="red"><strong> (Accepted for MICCAI 2021)</strong></font>
+                  TP-GAN</papertitle><font color="red"><strong> (Accepted for Oral Presentation in MICCAI 2021)</strong></font>
               </a>
               <br>
              <strong>Tajwar Abrar Aleef</strong>,
@@ -162,7 +162,8 @@
               <a href="https://scholar.google.com/citations?user=kpp_A9wAAAAJ&hl=en&oi=ao/">Septimiu E. Salcudean</a>,
               <a href="https://scholar.google.com/citations?user=cA0ELoQAAAAJ&hl=en/">S. Sara Mahdavi</a>
               <br>
-              <a href="http://www.ipcai.org/"><em>IPCAI</em></a>, 2021 &nbsp <font color="red"><strong>(Honorary Award for Best Presentation)</strong></font>
+              <a href="http://www.ipcai.org/"><em>IPCAI</em></a>, 2021 &nbsp <font color="red"><strong>(Oral
+              Presentation, Honorary Award for Best Presentation)</strong></font>
               <br>
               [<a
                     href="https://link.springer.com/epdf/10.1007/s11548-021-02405-1?sharing_token=MF1oEwRa6pGvFm32e8Vr-fe4RwlQNchNByi7wbcMAY5yK2t79Ld1LyvKdj4O86W-eJKERMX3fzzIoHbqG-VEdFfJckkkJN2Ef8MXj0pOqOwczUkeIispcquibso5I5D-7lIbdYguIuMWBHSBiq5Mv-_2k9dM1RCjxDcts7JUf_TgSQuKqlEQNG_F6C1BZm1J">Paper</a>
@@ -203,7 +204,8 @@
             <td style="padding:20px;width:75%;vertical-align:middle">
               <a href="https://arxiv.org/abs/2103.09276">
                 <papertitle>Co-Generation and Segmentation for Generalized Surgical Instrument Segmentation on
-                  Unlabelled Data</papertitle><font color="red"><strong> (Accepted for MICCAI 2021)</strong></font>
+                  Unlabelled Data</papertitle><font
+                      color="red"><strong> (Accepted for Oral Presentation in MICCAI 2021)</strong></font>
               </a>
               <br>
               <a href="https://scholar.google.com/citations?user=eoCliRUAAAAJ&hl=en">Megha Kalia**</a>,
