--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                   In my free time, I like to play
                   <a href="https://youtu.be/romBCY2_ATE" style="font-size: 14px">guitar</a>,
                   watch movies, and cook! I also enjoy all sorts of sports (nowadays doing powerlifting, ice-skating,
-                  biking, and bouldering). I wish to see and explore more parts of this beautiful earth; so
+                  biking, and bouldering). I wish to see and explore more parts of this wonderful earth; so
                   far I have covered 23 countries and countless cities/towns (check my <a
                           href="https://youtu.be/6G1_6NY0hQw" style="font-size: 14px">vlog</a>
                   from Thailand).
