--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
                   <br><br>
                   In my free time, I like to play
-                  <a href="https://youtu.be/romBCY2_ATE" style="font-size: 14px">guitar</a>,
+                  <a href="https://youtube.com/playlist?list=PL3m1Q5Dtntt8RTEJKjLOGsvp45aOg2WVw" style="font-size: 14px">guitar</a>,
                   watch movies, and cook! I also enjoy all sorts of sports (nowadays doing powerlifting, ice-skating,
                   biking, and bouldering). I wish to see and explore more parts of this wonderful earth; so
                   far I have covered 23 countries and countless cities/towns (check my <a
