Updated links of some videos

--- a/index.html
+++ b/index.html
@@ -692,7 +692,7 @@
 
                 <papertitle>SpruceBot</papertitle>
               <br>
-              <a href="">Video (TODO)</a>
+              <a href="https://youtu.be/mjolKfPiag8">Video</a>
               <p></p>
               Check the rovers below before reading this. Still obsessed with rovers, This was another attempt to
               make improvements. This version again got a gripper redesign. In this build, I figured out how to melt
@@ -729,7 +729,7 @@
 
                 <papertitle>RRL2</papertitle>
               <br>
-              <a href="">Video (TODO)</a>
+              [<a href="https://youtu.be/xStmz4oaPpU">Video</a> / <a href="https://youtu.be/XumcbrsZXJE">Short Video</a>]
               <p></p>
               This is the updated version of RRL1. After finding success with the electronic side of things, in this build, I focused on improving the mechanical design. Again with no proper tools and materials available, I used mostly things I found around the house. I improved the arm of the rover by trying to replicate designs I sourced online. This gripper was so much better that I could pick many different things using it. In the
               11 min long video, I show the things I could do with this version (even tried to pick up a pen and draw with it). Interesting fact: I didn't have any servos back then so I made a string pulley system to increase the load capacity of the DC motor that raises the arm.
@@ -764,7 +764,7 @@
 
                 <papertitle>RRL1</papertitle>
               <br>
-              <a href="https://youtu.be/RDmQXRWayOQ">Video</a>
+              <a href="https://youtu.be/QOROwr7lSEc">Video</a>
               <p></p>
               After seeing a documentary on NASA's Mars rovers: Spirit and Opportunity, I became obsessed with rovers. I have spent so many hours in my room trying to learn things on my own in the hopes of building
               my own rover. This journey started when I had no engineering training and was in 9th grade. After countless failed iterations, this was the first-ever version that actually worked. If you observe closely, this was made mostly out of cardboard, popsicle sticks, and foam board. The electronic parts were taken from RC cars. Fun fact: I was so happy with how it turned out that I named it after my high school sweetheart's initials.
