--- a/index.html
+++ b/index.html
@@ -660,7 +660,7 @@
                 <papertitle>Smart Line Follower</papertitle>
               <br>
               <a href="https://youtu.be/fsvVbdsJ3fM">Video
-                (warning inappropriate jokes!)</a>
+                (warning unprofessional jokes!)</a>
               <p></p>
               In my freshman year, as I started learning more about logic gates. I decided to make a line follower using just logic gates. Happy with the results, I wanted to see much can be done with logic gates alone and with no microcontroller. I used different patterns of line that the robot can read and based on that it knows if it has reached either end of the line. The robot has 1 bit of memory made from 1 JK flip-flop (also made out of logic gates). This memory is needed to store the state of the robot. If the robot has a payload, it will start its journey to the other side of the line. And only after the payload is removed, the rover will return back. Check the funny (and a bit inappropriate) story I made with this robot in the video.
             </td>
