--- a/index.html
+++ b/index.html
@@ -528,7 +528,7 @@
 
                 <papertitle>5-Axis Robotic Arm</papertitle>
               <br>
-              <a href="https://youtu.be/zGz-Ilaczoo">Video</a>
+              [<a href="https://youtu.be/zGz-Ilaczoo">Video</a>]
               <p></p>
               Made this totally from scratch with no access to proper tools. The parts were scorched and carved out of plastic sheets using just a box cutter. Rubber from a balloon was stapled onto the gripper for extra grip (my mom's idea). The 6 servos at each articulation point are controlled by an Arduino Mega board. The program I wrote for this uses inverse kinematics to control the position of the end effector. In the video, the arm is programmed to move to position A, grab the object, take it to position B, and drop it.
             </td>
@@ -560,7 +560,7 @@
 
                 <papertitle>Firefighting Bot</papertitle>
               <br>
-              <a href="https://youtu.be/iWBHc8A4hWQ">Video</a>
+              [<a href="https://youtu.be/iWBHc8A4hWQ">Video</a>]
               <p></p>
               Concept of autonomous fire detection and extinguishing. The bot has IR sensors mounted in front that look from fire in the surrounding environment. If a fire is detected, it goes towards it and turns on the extinguisher (here for simplicity a fan is used). Once the fire is out, the robot backs up and starts looking around for more possible fires.
             </td>
@@ -592,7 +592,7 @@
 
                 <papertitle>Surveillance Robot</papertitle>
               <br>
-              <a href="https://youtu.be/yoHOOmsJTkc">Video</a>
+              [<a href="https://youtu.be/yoHOOmsJTkc">Video</a>]
               <p></p>
               Here, I made a custom android controller that controls this robot using Bluetooth. Another Android phone mounted on the robot acts as an IP camera and sends live video feed to the controller. The robot can also automatically avoid obstacles using its onboard sonar sensor.
             </td>
@@ -625,7 +625,7 @@
 
                 <papertitle>Sonar Glasses for the visually impaired</papertitle>
               <br>
-              <a href="https://youtu.be/JOoEmXBZgmg">Video</a>
+              [<a href="https://youtu.be/JOoEmXBZgmg">Video</a>]
               <p></p>
               This is a simple concept of using sensors to assist visually impaired people. Sonar sensors were mounted onto glasses that detect if any obstacle is present in the periphery of the person. Based on the position of the object, two vibration motors mounted on each side of the glasses will vibrate with different amplitude- giving haptic feedback to the user and alerting them of nearby objects.
             </td>
@@ -659,8 +659,8 @@
 
                 <papertitle>Smart Line Follower</papertitle>
               <br>
-              <a href="https://youtu.be/fsvVbdsJ3fM">Video
-                (warning unprofessional jokes!)</a>
+              [<a href="https://youtu.be/fsvVbdsJ3fM">Video
+                (warning unprofessional jokes!)</a>]
               <p></p>
               In my freshman year, as I started learning more about logic gates. I decided to make a line follower using just logic gates. Happy with the results, I wanted to see much can be done with logic gates alone and with no microcontroller. I used different patterns of line that the robot can read and based on that it knows if it has reached either end of the line. The robot has 1 bit of memory made from 1 JK flip-flop (also made out of logic gates). This memory is needed to store the state of the robot. If the robot has a payload, it will start its journey to the other side of the line. And only after the payload is removed, the rover will return back. Check the funny (and a bit inappropriate) story I made with this robot in the video.
             </td>
@@ -692,7 +692,7 @@
 
                 <papertitle>SpruceBot</papertitle>
               <br>
-              <a href="https://youtu.be/mjolKfPiag8">Video</a>
+              [<a href="https://youtu.be/mjolKfPiag8">Video</a>]
               <p></p>
               Check the rovers below before reading this. Still obsessed with rovers, This was another attempt to
               make improvements. This version again got a gripper redesign. In this build, I figured out how to melt
@@ -764,7 +764,7 @@
 
                 <papertitle>RRL1</papertitle>
               <br>
-              <a href="https://youtu.be/QOROwr7lSEc">Video</a>
+              [<a href="https://youtu.be/QOROwr7lSEc">Video</a>]
               <p></p>
               After seeing a documentary on NASA's Mars rovers: Spirit and Opportunity, I became obsessed with rovers. I have spent so many hours in my room trying to learn things on my own in the hopes of building
               my own rover. This journey started when I had no engineering training and was in 9th grade. After countless failed iterations, this was the first-ever version that actually worked. If you observe closely, this was made mostly out of cardboard, popsicle sticks, and foam board. The electronic parts were taken from RC cars. Fun fact: I was so happy with how it turned out that I named it after my high school sweetheart's initials.
