Fixed a few table styles

--- a/index.html
+++ b/index.html
@@ -1,14 +1,29 @@
 <!DOCTYPE HTML >
-<html lang="en"><head ><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+<html lang="en"><head >
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
   <title>Tajwar Abrar Aleef</title>
   
   <meta name="author" content="Tajwar Abrar Aleef">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  
   <link rel="stylesheet" type="text/css" href="stylesheet.css">
   <link rel="icon" type="image/png" href="images/icon.png">
 </head>
+
+
+
+<!--@media only screen and (min-width: 0px) and (max-width: 700px) {-->
+
+<!--table {-->
+<!--  table-layout: fixed ;-->
+<!--  width: 100% ;-->
+<!--}-->
+<!--td {-->
+<!--      display:inline-block;-->
+<!--        width:100%;-->
+<!--}-->
+
+<!--}-->
 
 <body style="background-color: #C5C5C5;">
   <table
@@ -486,11 +501,13 @@
         </tbody></table>
 
 
+
 <!--Engineering projects-->
 <!--        -->
-        <table width="100%" align="center" border="0" cellspacing="0" cellpadding="20"><tbody>
+        <table
+                style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
           <tr>
-            <td>
+            <td style="padding:20px;width:100%;vertical-align:middle">
               <heading>Past Engineering Projects</heading>
               <p>
               I always loved hands-on engineering and even long before I got formal education on engineering, I used to mess around with any electronic devices I could find to build new things out of them. I will add some of the documented builds slowly (most of these are from my high school and freshman year). Scroll to the bottom to see some janky yet wonderful rovers I made out of literally cardboard and broken toys.
@@ -779,19 +796,19 @@
 
 
 
-        <table width="100%" align="center" border="0" cellspacing="0" cellpadding="20"><tbody>
+        <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
           <tr>
-            <td>
+            <td style="padding:20px;width:100%;vertical-align:middle">
               <heading>Teaching Experience</heading>
             </td>
           </tr>
         </tbody></table>
 
-        <table width="100%" align="center" border="0" cellpadding="20"><tbody>
+        <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
           <tr>
             <td style="padding:20px;width:25%;vertical-align:middle"><img
                     src="images/ECE_closed_full_colour-high-res_0.jpg"></td>
-            <td width="75%" valign="center">
+            <td style="padding:20px;width:75%;vertical-align:middle">
               <a href="https://ece.ubc.ca/"><papertitle>Department of Electrical and Computer Engineering, University
               of British Columbia </papertitle></a>
               <br><br>
@@ -815,7 +832,7 @@
             <td style="padding:20px;width:25%;vertical-align:middle">
               <img src="images/SBME_UBC_Horizontal_Primary_Colour_RGB.png">
             </td>
-            <td width="75%" valign="center">
+            <td style="padding:20px;width:75%;vertical-align:middle">
               <a href="https://www.bme.ubc.ca/"><papertitle>School of Biomedical Engineering, University
               of British Columbia</papertitle> </a>
               <br><br>
