--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
             <td style="padding:20px;width:75%;vertical-align:middle">
               <a href="https://arxiv.org/abs/2103.09996">
                 <papertitle>Rapid treatment planning for low-dose-rate prostate brachytherapy with
-                  TP-GAN</papertitle><font color="red"><strong> (Accepted for Oral Presentation in MICCAI 2021)</strong></font>
+                  TP-GAN</papertitle><font color="red"><strong> (Oral Presentation - MICCAI 2021)</strong></font>
               </a>
               <br>
              <strong>Tajwar Abrar Aleef</strong>,
@@ -134,7 +134,10 @@
 
               <a href="https://miccai2021.org/en/"><em>MICCAI</em></a>, 2021 &nbsp
               <br>
-              [<a href="https://arxiv.org/abs/2103.09996">arXiv</a>
+              [<a href="https://www.rsipvision.com/MICCAI2021-Tuesday/4/">Magazine interview</a>/
+              <a
+                      href="https://link.springer.com/epdf/10.1007/978-3-030-87202-1_56?sharing_token=XMfrj1i6h4Yx_eUeGvt4wve4RwlQNchNByi7wbcMAY5jIjVfLm7XRSlmEv2IA6krH_IFYovsRiFpSRmT2CoGwloGMqfCD3mGIDC9b___FUR8--m1mXocrJswEGo5TwyTHVF7eAu1ByAYvDM42pkrhy06tvrXUWcTwidPAkeJb2k%3D">Paper</a>
+              <a href="https://arxiv.org/abs/2103.09996">arXiv</a>
               /
               <a href="https://github.com/tajwarabraraleef/TP-GAN">Code</a>]
 
